--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 :root{
     --branco: white;
     --cor-de-fundo: #00162E;
@@ -11,18 +8,15 @@
     --roboto-mono: 'Roboto Mono', monospace;
 }
 
-
-
-
-body{
-    color: var(--branco);
-    background-color: var(--cor-de-fundo);
-}
-
 body{
     color: var(--branco);
     background-color: var(--cor-de-fundo);
     font-family: var(--roboto);
+}
+
+.conteudo-titulo{
+    text-align: center;
+    margin-top: 80px;
 }
 
 .titulo-principal{
@@ -33,4 +27,36 @@ body{
 .titulo-secundario{
     font-size: 24px;
 }
+
+{
+    font-weight: 400
+}
+
+.conteudo-senha{
+    margin-top: 80px; 
+    background: var(--fundo-senha);
+    padding: 24px;
+    border-bottom: 6px solid var(--borda);
+}
+
+#campo-senha{
+    background-color: var(--fundo-senha);
+    border: none;
+    color: var(--branco);  
+    font-family: var(--roboto-mono);
+    font-size: 40px;
+}
+
+#campo-senha:focus{
+    outline: none;
+}
+
+
+.conteudo{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+
+
 
